...
                        onValueChange = {
                            searchQuery = it
                            onSearchQueryChange(it)
                        },
                        modifier = Modifier
                            .fillMaxWidth()
                            .testTag("searchBar")
                            .focusRequester(textFocusRequester)
                            .onFocusChanged { focusState ->
                                isFocused = focusState.isFocused
                                onFocusChange(isFocused)
                            },
                        textStyle = TextStyle(
...
