...
                        }
                        TextButton(onClick = {
                            onIndoorSetAsDestination(suggestion)
                            firebaseAnalytics.logEvent("indoor_set_as_destination", null)
                            UsabilityTrackerIRLUsers.userInteractionRecord("indoor_set_as_destination")
                        }) {
                            Text("Set as destination")
                        }
                    }
                }
            }


...
