...
    override fun getShuttleStops(): List<ShuttleStop> = listOf(
        ShuttleStop(
            id = "sgw_shuttle",
            name = "SGW Shuttle Stop",
            campus = Campus.SGW,
            latLng = SGW_STOP_LAT_LNG,
            description = "Henry F. Hall Building, 1455 De Maisonneuve Blvd. W."
        ),
        ShuttleStop(
            id = "loyola_shuttle_arrival",
            name = "Loyola Shuttle Stop (Arrival)",
            campus = Campus.LOYOLA,
            latLng = LOYOLA_ARRIVAL_LAT_LNG,
...
